fixed buttons alignment

--- a/sass/layout/_display.scss
+++ b/sass/layout/_display.scss
@@ -6,7 +6,7 @@
     align-items: flex-end;
 }
 
-#display__text{
+#display_text{
     font-size: 60px;
     padding-right: 0.8rem;
     padding-left: 0.8rem;
